eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-webwizards-api-service
spec:
  selector:
    app: backend-webwizards-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
