eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
    controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-webwizards-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: api.webwizards.doumenjou.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-webwizards-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.webwizards.doumenjou.io
      secretName: backend-webwizards-api-cert
